# ai-finance

./: .replit  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
attached_assets/: Pasted--2-TELEGRAM-MINI-APP--1778240006449_1778240006450.txt  Pasted--3--1778241757155_1778241757156.txt  Pasted--REPLIT-AGENT-Telegram-AI--1778167508242_1778167508243.txt
telegram-bot/: main.py  middleware.py  requirements.txt  supabase_schema.sql
telegram-bot/api/: auth.py  routes.py  server.py  webhooks.py
telegram-bot/handlers/: admin.py  ai_advisor.py  categories.py  external_verify.py  onboarding.py  payments.py  plan.py  recurring.py  referrals.py  start.py  stats.py  transactions.py
telegram-bot/services/: budgets.py  gemini.py  lava.py  plans.py  scheduler.py  storage.py
telegram-bot/supabase_migrations/: 002_add_plans.sql  003_referrals.sql  004_export_event.sql  005_csv_import_event.sql  006_custom_categories.sql  007_recurring_payments.sql  008_banned_users.sql  009_add_pro_plan.sql  009_category_budgets.sql
telegram-bot/utils/: categories.py  formatters.py  safety.py  streak.py
telegram-bot/webapp/: app.js  app.v2.js  index.html  style.css
